2003-10-13  Rodrigo Moya <rodrigo@ximian.com>

	* e-source-group.[ch] (e_source_group_peek_source_by_name): added
	new function.

2003-10-10  Not Zed  <NotZed@Ximian.com>

	* e-account-list.c (e_account_list_find): add FIND_UID find type.

2003-09-26  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyaddr_r): IPv6 implementation
	rewritten to use getnameinfo() which is the proper function to use
	in this case. Fixes bug #46006 the Right Way (tm).

2003-09-25  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyaddr_r): Make sure that
	res->ai_canonname is non-NULL and that it doesn't match the
	numeric host address that we were trying to resolve. Fixes the
	second half of bug #46006.

2003-09-19  Jeffrey Stedfast  <fejj@ximian.com>

	* e-host-utils.c (e_gethostbyaddr_r): Work around a bug in glibc
	2.3.2's gethostbyaddr_r() implementation.

2003-09-15  Larry Ewing  <lewing@ximian.com>

	* e-source.c (e_source_dump_to_xml_node): make sure declarations
	precede the body.

2003-09-11  Dan Winship  <danw@ximian.com>

	* Makefile.am (noinst_LTLIBRARIES): Remove libeutil-static.la and
	libeconduit-static.la

	* ename/Makefile.am (noinst_LTLIBRARIES): Remove
	libename-static.la

2003-08-28  Hans Petter Jansson  <hpj@ximian.com>

	* eggtrayicon.[ch]: Added for tray icon support. To be removed when
	libgnomeui sports this functionality.

	* Makefile.am: Include eggtrayicon.

2003-08-27  Jeffrey Stedfast  <fejj@ximian.com>

	* e-mktemp.c (e_mktemp_cleanup): We need to unlink the full paths
	in the tmpdirs, not just the base path.

2003-08-20  Suresh Chandrasekharan <suresh.chandrasekharan@sun.com>
	
	* e-time-utils.c (parse_with_strptime): Fixes #43558 Appointment
	Editor always gives time validation error for apptmnts in non
	UTF-8/non ASCII locales.

2003-08-17  Ettore Perazzoli  <ettore@ximian.com>

	* test-source-list.c: No short letter for --key.

2003-08-15  Ettore Perazzoli  <ettore@ximian.com>

	* e-uid.c: #include <glib/gstrfuncs.h>
